[package]
name = "bulkmail"
version = "0.2.1"
authors = ["Giovanni Bassi <giggio@giggio.net>"]
edition = "2021"

[features]
static = []

[profile.release]
lto = true

[dependencies]
clap = "2.34"
csv = "1.1.6"
handlebars = "4.1.1"
lettre = { version = "0.10.0-rc.4", features = ["rustls-tls"] }
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.1"
